# mirage

./: .gitignore  Cargo.toml  LICENSE  PRODUCT.md  README.en.md  README.md
src/: anim.rs  apps.rs  codex.rs  config.rs  mail.rs  main.rs  wm.rs
src/ui/: agent.rs  browser.rs  chrome.rs  desktop.rs  dock.rs  finder.rs  icon.rs  launchpad.rs  mail.rs  maps.rs  menubar.rs  mod.rs  music.rs  photos.rs  reminders.rs  settings.rs  terminal.rs  trash.rs  wechat.rs  widgets.rs
tools/: bundle.sh  make_icon.py  make_icon.sh
