[package]
name = "mirage"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = "0.34"
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# 音乐：rodio 播放（symphonia 全格式 mp3/m4a/flac/wav…），lofty 读标签与内嵌封面
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
lofty = "0.22"
wry = "0.55.1"
raw-window-handle = "0.6.2"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
egui_commonmark = "0.23"
# crates.io 的 0.1.0 钉在 egui 0.31，主线已升 0.34 但未发版——用 git 固定 rev
egui_term = { git = "https://github.com/Harzu/egui_term", branch = "main" }
# 邮件：IMAP 收信 + SMTP 发信（同步阻塞模型放后台线程，项目无 tokio）
imap = "2.4"
native-tls = "0.2"
lettre = "0.11"
mailparse = "0.16"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
